# libtc_tea

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  libtc_tea (msys2).code-workspace
.github/workflows/: test-coverage.linux-x86_64.yml
cmake/: .gitignore  config.cmake.in  git-info.cmake
include/tc_tea/: api.h  tc_tea.h  version.h  version.h.in
src/: version.cpp.in
src/tc_tea/: tc_tea_cbc.cpp  tc_tea_cbc.test.cc  tc_tea_ecb.cpp  tc_tea_ecb.test.cc
src/utils/: EndianHelper.h  utils.h
tc_tea/: cbc.c  cbc.test.cc  cbc_decrypt.c  cbc_encrypt.c  ecb.c  ecb.h  ecb.test.cc  tea_utils.h
